--- a/index.html
+++ b/index.html
@@ -50,16 +50,14 @@
                               <div class="form-group">
                                    <label for="val1" class="col-sm-2 control-label">Value 1</label>
                                    <div class="col-sm-10">
-                                        <input type="text" class="form-control" id="val1" name="value1"
-                                             placeholder="Value 1">
+                                        <input type="text" class="form-control" id="val1" name="value1">
                                         <div class="alert alert-danger" role="alert" id="errorVal1"></div>
                                    </div>
                               </div>
                               <div class="form-group">
                                    <label for="val2" class="col-sm-2 control-label">Value 2</label>
                                    <div class="col-sm-10">
-                                        <input type="text" class="form-control" id="val2" name="value2"
-                                             placeholder="Value 2">
+                                        <input type="text" class="form-control" id="val2" name="value2">
                                         <div class="alert alert-danger" role="alert" id="errorVal2"></div>
                                    </div>
                               </div>
@@ -99,7 +97,7 @@
                     <form>
                          <div class="mb-3">
                               <label for="title" class="form-label">Title</label>
-                              <input type="text" class="form-control" id="title" placeholder="name@example.com">
+                              <input type="text" class="form-control" id="title">
                          </div>
                          <div class="mb-3">
                               <label for="description" class="form-label">Description</label>
